# g-ai-j

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  README_validations.md  REFACTORING_PLAN.md  app.py  docker-compose.yml  firestore_state.py  gmail_client.py  gmail_watch.py  gpt_agent.py  jira_client.py  logger_setup.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: deploy.yml  test-and-deploy.yml
infra/: README.md  install.sh  install.yml
src/gaij/: app.py  firestore_state.py  gmail_client.py  gmail_watch.py  gpt_agent.py  html_renderer.py  html_to_adf.py  jira_client.py  main.py  (+2 more)
tests/: conftest.py  test_allowed_senders.py  test_app_edge_cases.py  test_attachment_filters_and_limits.py  test_attachments_file_basic.py  test_attachments_inline_images.py  test_attachments_mime_filter.py  test_attachments_no_duplicates_for_processed_message.py  test_attachments_skip_oversize.py  test_concurrent_processing.py  test_dedupe_no_reupload.py  test_end_to_end_pubsub_payload_with_attachments.py  test_file_attachments_upload.py  test_firestore_state.py  test_gmail_client_parsing.py  test_gmail_client_service.py  test_gpt_agent_and_utils.py  test_html_renderer_linebreaks.py  test_html_renderer_png.py  test_html_to_adf_basic.py  test_html_to_adf_styles_and_breaks.py  test_inline_images_cid_mapping.py  test_jira_client_adf.py  test_jira_client_edge_cases.py  test_jira_upload_failure_partial.py  test_main.py  test_pubsub_flow_with_formatting.py  test_pubsub_handler.py  test_render_full_fidelity_pdf.py  test_watch_gmail.py
